--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,3 +1,5 @@
+# place in dir where your scripts are running from. 
+
 [paramiko_connection]
 # by default, Ansible requests a pseudo-terminal for commands executed under sudo. Uncomment this
 # line to disable this behaviour.
